2011-12-5
mark ch2duokan as experiment
edit sync.sh --> add remove spam
edit README

2011-12-4
add switch system to duokan lite
edit finance.py --> temple is user-part string
add changelog