@@ -32,7 +32,7 @@ listmusic() {
 
 cmd() {
     if [ "x$(pidof mplayer)" = "x" ]; then
-        return 1;
+		return 1;
     fi
     echo "$@" > $FIFO
     return 0;
@@ -40,59 +40,59 @@ cmd() {
 
 loadplaylist() {
     if ! cmd "loadlist $1"; then
-        $MPLAYER -loop 0 -playlist $1 &
+		$MPLAYER -loop 0 -playlist $1 &
     fi
 }
 
 
 case "$1" in
     playall)
-        listmusic > /tmp/mplayer.playlist
-        loadplaylist /tmp/mplayer.playlist
-        ;;
+		listmusic > /tmp/mplayer.playlist
+		loadplaylist /tmp/mplayer.playlist
+		;;
 ##	playrec)
-##        listrecord > /tmp/mplayer.playlist
-##        loadplaylist /tmp/mplayer.playlist
-##        ;;
+##		listrecord > /tmp/mplayer.playlist
+##		loadplaylist /tmp/mplayer.playlist
+##		;;
     playrand)
-        listmusic | $SHUF > /tmp/mplayer.playlist
-        loadplaylist /tmp/mplayer.playlist
-        ;;
+		listmusic | $SHUF > /tmp/mplayer.playlist
+		loadplaylist /tmp/mplayer.playlist
+		;;
 #    playlist)
-#        loadplaylist $PLAYLIST
-#        ;;
+#		loadplaylist $PLAYLIST
+#		;;
 	playlist)
 		$pythonbin $createlist playlist > /tmp/mplayer.playlist
-        loadplaylist /tmp/mplayer.playlist
-        ;;
+		loadplaylist /tmp/mplayer.playlist
+		;;
 	playrec)
 		$pythonbin $createlist reclist > /tmp/mplayer.playlist
-        loadplaylist /tmp/mplayer.playlist
-        ;;
+		loadplaylist /tmp/mplayer.playlist
+		;;
 	playstr)
 		$pythonbin $createlist strlist > /tmp/mplayer.playlist
-        loadplaylist /tmp/mplayer.playlist
+		loadplaylist /tmp/mplayer.playlist
 		;;
 	fixyou)
 		echo /mnt/us/music/FixYou.wav > /tmp/mplayer.playlist
-        loadplaylist /tmp/mplayer.playlist
-        ;;
+		loadplaylist /tmp/mplayer.playlist
+		;;
     pause)
-        cmd "pause"
-        ;;
+		cmd "pause"
+		;;
     stop)
 	    killall mplayer
-        ;;
+		;;
     prev)
-        cmd "pt_step -1"
-        ;;
+		cmd "pt_step -1"
+		;;
     next)
-        cmd "pt_step 1"
-        ;;
+		cmd "pt_step 1"
+		;;
     *)
-        echo "Usage: $0 {playall|playrec|playrand|playlist|pause|stop|prev|next}"
-        exit 1
-        ;;
+		echo "Usage: $0 {playall|playrec|playrand|playlist|pause|stop|prev|next}"
+		exit 1
+		;;
 esac
 
 exit 0
